ShopNow/sf/force-app/main/default/objects/Duplicate_Match__c/Duplicate_Match__c.object-meta.xml
<CustomObject>
    <description>Stores potential duplicate pairs of customers.</description>
    <label>Duplicate Match</label>
    <pluralLabel>Duplicate Matches</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Duplicate Match</label>
        <displayFormat>DM-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>