ShopNow/sf/force-app/main/default/objects/Duplicate_Match__c/fields/Customer_A__c.field-meta.xml
<CustomField>
    <fullName>Customer_A__c</fullName>
    <label>Customer A</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Customer A</relationshipLabel>
    <relationshipName>CustomerA</relationshipName>
    <type>Lookup</type>
</CustomField>