ShopNow/sf/force-app/main/default/objects/Duplicate_Match__c/fields/Customer_B__c.field-meta.xml
<CustomField>
    <fullName>Customer_B__c</fullName>
    <label>Customer B</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Customer B</relationshipLabel>
    <relationshipName>CustomerB</relationshipName>
    <type>Lookup</type>
</CustomField>