ShopNow/sf/force-app/main/default/objects/Duplicate_Match__c/fields/Pair_Key__c.field-meta.xml
<CustomField>
    <fullName>Pair_Key__c</fullName>
    <description
	>Unique identifier for customer pairs to prevent duplicate match records. Format: {smaller_id}:{larger_id}</description>
    <label>Pair Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>